--- a/septa-fare-calculator/index.html
+++ b/septa-fare-calculator/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>SEPTA Regional Rail Fare Calculator</title>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>SEPTA Regional Rail Fare Calculator</title>
+		<link rel="stylesheet" type="text/css" href="/main.css">
+	</head>
+	<body data-ng-app="septaFareApp">
+		<script src="/angular.min.js"></script>
+	</body>
 </html>
