1hr mark on coding challenge.

--- a/septa-fare-calculator/index.html
+++ b/septa-fare-calculator/index.html
@@ -8,6 +8,14 @@
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body data-ng-app="septaFareApp">
+		<!-- Septa Fare Module -->
+		<div class=septaFareModule>
+			<septa-fare-form></septa-fare-form>
+		</div>
+		<!-- AngularJS dependencies -->
 		<script src="/angular.min.js"></script>
+		<script src="/septaFare.Module.js"></script>
+		<script src="/septaFare.Service.js"></script>
+		<script src="/septaFare.Component.js"></script>
 	</body>
 </html>
