AngluarJS and html template complete

--- a/septa-fare-calculator/index.html
+++ b/septa-fare-calculator/index.html
@@ -5,13 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SEPTA Regional Rail Fare Calculator</title>
+		<link rel="stylesheet" type="text/css" href="/normalize.css">
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body data-ng-app="septaFareApp">
 		<!-- Septa Fare Module -->
-		<div class=septaFareModule>
-			<septa-fare-form></septa-fare-form>
-		</div>
+		<septa-fare-form></septa-fare-form>
 		<!-- AngularJS dependencies -->
 		<script src="/angular.min.js"></script>
 		<script src="/septaFare.Module.js"></script>
